# nat

./: .gitignore  AUDIT_TIER.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.agentile/: AGENT_ENTRY.md  HANDOFF_NAT_DATA.md
.agentile/planset/: README.md  gates.yaml  hypotheses.md
.agentile/planset/case-studies/: CS-00-forward-pass.md  CS-01-h01-the-bet.md  CS-02-real-data-and-scaling.md
.agentile/planset/decisions/: ADR-0001-hybrid-routing.md  ADR-0002-ssm-in-temporal-zones.md  ADR-0003-provenance-as-output.md  ADR-0004-auxiliary-sidecar.md  ADR-0005-baseline-protocol.md  ADR-0006-faithfulness-scope.md  ADR-0007-compute-pool-seam.md  ADR-0008-zone-staging.md  ADR-0009-l0-numerics.md  ADR-0010-candle-l1-framework.md
.agentile/research-loop/: DATA_VOLUME_SCOPING.md  INTENT.md  READING_LIST.md
.agentile/sprints/active/: 2026-06-21-S2-trainable-zone-pass.md  2026-06-22-DATA-S1-real-corpus.md  2026-06-22-HERMES-S1-data-research-agent.md  2026-06-22-NAT-S3-federated.md  2026-06-25-SCALE-S1-toward-half-a-billion.md
.agentile/sprints/completed/2026-06/: 2026-06-21-S2-trainable-zone-pass.md  2026-06-22-DATA-S1-real-corpus.md  2026-06-22-NAT-S3-federated.md  2026-06-28-i64-s1-kernel-repin.md
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
PLANSET/: 00_OVERVIEW.md  01_MASTER_PLAN.md  02_ARCHITECTURE.md  03_FORMAL_SCAFFOLD.md  04_DATA_OPS.md  05_RESEARCH_METHOD.md  06_VISUAL_DESIGN_BRIEF.md  07_SPRINTS_AND_WPS.md  08_CRITIQUE_AND_REMEDIATIONS.md  09_JOURNAL.md
crates/nat-ablation/: Cargo.toml
crates/nat-ablation/examples/: ablation.rs  real_ablation.rs  real_h01_corpus.rs
crates/nat-ablation/src/: lib.rs  models.rs  real.rs
crates/nat-aggregate/: Cargo.toml
crates/nat-aggregate/src/: compress.rs  lib.rs
crates/nat-candle/: Cargo.toml
crates/nat-candle/examples/: bench_throughput.rs  export_gguf.rs  gpu_probe.rs  h01_autoreg_bpe.rs  param_matched_bpe_sweep.rs  scale_ladder.rs  train_autoreg.rs  train_autoreg_bpe.rs  train_corpus.rs
crates/nat-candle/src/: autoreg.rs  cores.rs  corpus.rs  device.rs  factory.rs  gguf.rs  lib.rs  merge_train.rs  router.rs  seed.rs  train.rs  train_loop.rs  trainable.rs
crates/nat-core/: Cargo.toml
crates/nat-core/src/: cores.rs  featurize.rs  gather.rs  lib.rs  merge.rs  model.rs  router.rs
crates/nat-core/tests/: gate2_async_gather.rs  gate2_forward_pass.rs  gate2_mcp_harness.rs
crates/nat-data/: Cargo.toml
crates/nat-data/src/: bpe.rs  code.rs  gutenberg.rs  jsonl.rs  latex.rs  lib.rs  manifest.rs  persist.rs  quality.rs  seed.rs  text.rs  tokenizer.rs  zonetag.rs
crates/nat-data/tests/: settlement_loop.rs
crates/nat-distill/: Cargo.toml
crates/nat-distill/src/: lib.rs
crates/nat-eval/: Cargo.toml
crates/nat-eval/src/: battery.rs  lib.rs
crates/nat-eval/tests/: h02_heldout.rs  h02_trained_router.rs
crates/nat-federated/: Cargo.toml
crates/nat-federated/src/: lib.rs  seam.rs
crates/nat-lora/: Cargo.toml
crates/nat-lora/src/: commit.rs  lib.rs  linalg.rs
crates/nat-lora/tests/: meta_transfer.rs
crates/nat-mcp/: Cargo.toml
crates/nat-mcp/src/: lib.rs
crates/nat-provenance/: Cargo.toml
crates/nat-provenance/src/: lib.rs
crates/nat-sidecar/: Cargo.toml
crates/nat-sidecar/src/: lib.rs
crates/nat-train/: Cargo.toml
crates/nat-train/src/: lib.rs  repro.rs
crates/nat-types/: Cargo.toml
crates/nat-types/src/: fixed.rs  lib.rs
crates/nat-weightspace/: Cargo.toml
crates/nat-weightspace/src/: commit.rs  encoder.rs  lib.rs  rng.rs
docs/: BRANCH_PROTECTION.md  DGX_HANDOFF.md  SETTLEMENT_SEAM.md
features/: gate2_async_gather.feature  gate2_forward_pass.feature  gate2_mcp_harness.feature  gate3_gguf_roundtrip.feature  gate4_federated.feature
formal/: AsyncGather.cfg  AsyncGather.tla  GradientAggregation.cfg  GradientAggregation.tla  GradientAggregationAdversarial.cfg  GradientAggregationAdversarial.tla  LoraRegistration.cfg  LoraRegistration.tla  McpHarness.cfg  McpHarness.tla  MergeDeterminism.cfg  MergeDeterminism.tla  README.md  UnifiedSettlement.cfg  UnifiedSettlement.tla  WeightCommitment.cfg  WeightCommitment.tla
paper/: 00_OVERVIEW.md  02_related_work.md  03_architecture.md  04_verifiability.md  05_hypotheses.md  06_results.md  07_federated.md  08_discussion.md  09_conclusion.md  CASE_STUDY_agents_doing_science.md  OUTLINE.md
paper/arxiv/: README.md  main.tex  references.bib
paper/comms/: 2026-06-23-the-blob-of-weights.md  2026-06-24-the-seed-that-diverged.md
paper/research/: REDTEAM_FINDINGS.md  RELATED_WORK_AND_CITATIONS.md
scripts/: backup-corpus.sh  build-corpus-v4.sh  build-corpus-v5.sh  build-corpus-v6.sh  ci-local.sh  dgx-gpu.sh  fetch-code-craft.sh  fetch-corpus-volume.sh  fetch-values-spine.sh  fetch-wikipedia.sh  install-hooks.sh  run-tlc.sh
scripts/hooks/: pre-push
