[package]
name = "nat-candle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Candle-backed zone cores (CPU) implementing nat_core::cores::ZoneCore. The L1 training stack behind the L0 toy cores (ADR-0009)."

[dependencies]
nat-core.workspace = true
nat-types.workspace = true
nat-sidecar.workspace = true
nat-train.workspace = true
candle-core = "0.8"
candle-nn = "0.8"

[features]
# Opt-in GPU path (the DGX / L1 build, §5.1 of docs/DGX_HANDOFF.md). Off by
# default so the standard workspace build + CI stay CPU-only and need no CUDA
# toolkit. Build the GPU path with: cargo build -p nat-candle --features cuda
cuda = ["candle-core/cuda", "candle-nn/cuda"]

[dev-dependencies]
nat-provenance.workspace = true
