[package]
name = "nat-distill"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Federated distillation on a shared probe set (WS-2 Layer A): architecture-agnostic capability transfer — only probe-set logits cross the wire, aggregated deterministically (nat-aggregate), distilled into a student, gated by McNemar."

[dependencies]
nat-types.workspace = true
nat-core.workspace = true
nat-eval.workspace = true
nat-aggregate.workspace = true
sha2.workspace = true
