[package]
name = "nat-provenance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "The NAT provenance trace: schema, deterministic hash, the canonical merge decision, and decision-faithful replay."

[dependencies]
nat-types.workspace = true
serde.workspace = true
ciborium.workspace = true
sha2.workspace = true

[dev-dependencies]
serde_json.workspace = true
