[package]
name = "nat-sidecar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The NAT sidecar (.nat.json): the zone graph, topology, and merge params that wrap a GGUF/ONNX tensor container (ADR-0004)."

[dependencies]
nat-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
