[package]
name = "nat-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true
description = "Shared primitives for NAT: ZoneId, CoreType, Status, and the Q16.16 deterministic fixed-point type (re-exported from the citrate-fed-types boundary kernel)."

[dependencies]
citrate-fed-types.workspace = true
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
